<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Arreglalo.arreglalo.per_data">

    <EditText
        android:id="@+id/ed_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ed_apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nombre"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        app:layout_constraintTop_toBottomOf="@+id/ed_apellidos"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ed_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <Button
        android:id="@+id/bt_sig"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/estado_but"
        android:onClick="click"

        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ck_tdp" />

    <CheckBox
        android:id="@+id/ck_tyc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/green_Arre"
        android:onClick="uncheck"
        android:text="@string/ck_tyc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_contrasena"
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/ck_tdp"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/green_Arre"
        android:onClick="uncheck"
        android:text="@string/ck_tdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ck_tyc"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>