<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmService">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="417dp"
        android:layout_height="191dp"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bannerservicio" />

    <TextView
        android:id="@+id/txt_infoCost"
        android:layout_width="233dp"
        android:layout_height="98dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/infoCost"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_calc"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:text="@string/timeCalc"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_infoCost" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="526dp"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="-80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/estado_but"
                android:onClick="click"
                android:text="@string/enviar"
                app:backgroundTint="@color/arre_darkGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hora"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btfecha"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/estado_but"
                android:onClick="fechaHora"
                android:text="@string/fecha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/det" />

            <Button
                android:id="@+id/bthora"
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/estado_but"
                android:onClick="fechaHora"
                android:text="@string/hora"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btfecha" />

            <EditText
                android:id="@+id/det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_camposervicio"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descDet"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_cuentano"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/servicio"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_cuentano"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/cuentanos"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/services" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/fecha"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toEndOf="@+id/btfecha"
                app:layout_constraintTop_toBottomOf="@+id/det" />

            <TextView
                android:id="@+id/hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toEndOf="@+id/bthora"
                app:layout_constraintTop_toBottomOf="@+id/fecha" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>