<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Arreglalo.arreglalo.MainActivity2">

    <EditText
        android:id="@+id/ed_number"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_numerotelefono"
        android:ems="10"
        android:hint="@string/num_camp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:paddingEnd="10dp"
        android:paddingLeft="100dp"
        android:paddingRight="10dp"
        android:paddingStart="100dp"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="99dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/txt_2"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btsms"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/estado_but"
        android:onClick="clikc"
        android:text="@string/btn_numtel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_number" />

</androidx.constraintlayout.widget.ConstraintLayout>