<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mapaintento1">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="385dp"
        android:layout_height="288dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/direcci_n"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <EditText
        android:id="@+id/ed_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ciudad"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_direccion" />

    <EditText
        android:id="@+id/ed_detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/details"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_ciudad" />

    <Button
        android:id="@+id/bt_ready"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/estado_but"
        android:onClick="reaady"
        android:text="@string/bt_finish"
        android:textColorHighlight="@color/arre_blue"
        android:textColorLink="@color/arre_darkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_detalles" />

</androidx.constraintlayout.widget.ConstraintLayout>